force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>This Custom Object will be used for capturing Issue of Opportunity and Problem type i.e related to various parent object records like Account, Contact, Interaction, Initiative, Financial Incentive etc</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>ISSUE-{YYYY}-{000000}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>