force-app/main/default/objects/Issue__c/fields/Client_Satisfaction_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction_Survey_Status__c</fullName>
    <label>Client Satisfaction Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
                <isActive>false</isActive>
                <label>Unresponsive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>