force-app/main/default/objects/Issue__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>The date the issue was resolved</description>
    <inlineHelpText>The date the issue was resolved</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>