force-app/main/default/objects/Issue__c/fields/Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>Date_Raised__c</fullName>
    <description>The date the issue was identified/raised</description>
    <inlineHelpText>The date the issue was identified/raised</inlineHelpText>
    <label>Date Raised</label>
    <required>true</required>
    <type>Date</type>
</CustomField>