force-app/main/default/objects/Issue__c/fields/Describe_Request__c.field-meta.xml
<CustomField>
    <fullName>Describe_Request__c</fullName>
    <label>Describe Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>