force-app/main/default/objects/Issue__c/fields/Description_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Opportunity__c</fullName>
    <label>Description of Opportunity</label>
    <type>TextArea</type>
</CustomField>