force-app/main/default/objects/Issue__c/fields/Description_of_Problem__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Problem__c</fullName>
    <label>Description of Problem</label>
    <type>TextArea</type>
</CustomField>