force-app/main/default/objects/Issue__c/fields/EDC_Report__c.field-meta.xml
<CustomField>
    <fullName>EDC_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an indicator if the interaction should be included in the report that is sent to the Councillor.</description>
    <inlineHelpText>This is an indicator if the interaction should be included in the report that is sent to the Councillor.</inlineHelpText>
    <label>EDC Report</label>
    <type>Checkbox</type>
</CustomField>