force-app/main/default/objects/Issue__c/fields/EDC_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>EDC_Report_Type__c</fullName>
    <label>EDC Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot Issues and Advance Notice</fullName>
            </value>
            <value>
                <fullName>Local Business Investment, Formation and Growth</fullName>
            </value>
            <value>
                <fullName>International Trade and Investment</fullName>
            </value>
            <value>
                <fullName>Sector Competitiveness</fullName>
            </value>
            <value>
                <fullName>Workforce Development</fullName>
            </value>
            <value>
                <fullName>Council and Intergovernmental</fullName>
            </value>
            <value>
                <fullName>ED&amp;C Operations and Budgets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>