force-app/main/default/objects/Issue__c/fields/Financial_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Financial_Incentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Incentive</label>
    <referenceTo>Financial_Incentive__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>