force-app/main/default/objects/Issue__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy (competitive policy, development, infrastructure)</fullName>
            </value>
            <value>
                <fullName>Associations / Conference / Networks / Roundtables</fullName>
            </value>
            <value>
                <fullName>BIA - Capacity Building</fullName>
            </value>
            <value>
                <fullName>BIA - Startup</fullName>
            </value>
            <value>
                <fullName>Business Development – Business to Business</fullName>
            </value>
            <value>
                <fullName>Business Development - Procurement</fullName>
            </value>
            <value>
                <fullName>City Collaboration - City Sponsorship</fullName>
            </value>
            <value>
                <fullName>City Collaboration - Good News Story</fullName>
            </value>
            <value>
                <fullName>City Collaboration - Joint Projects</fullName>
            </value>
            <value>
                <fullName>City Collaboration - Roundtable Engagement</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Foreign Direct Investment (FDI)</fullName>
            </value>
            <value>
                <fullName>Funding - General Grants</fullName>
            </value>
            <value>
                <fullName>Funding - IMIT</fullName>
            </value>
            <value>
                <fullName>Funding - Research and Development</fullName>
            </value>
            <value>
                <fullName>International - Export Development</fullName>
            </value>
            <value>
                <fullName>International - Trade Mission</fullName>
            </value>
            <value>
                <fullName>Support - Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Support - Waste Reduction</fullName>
            </value>
            <value>
                <fullName>Support - Wastewater and Stormwater</fullName>
            </value>
            <value>
                <fullName>Support - Water Conservation</fullName>
            </value>
            <value>
                <fullName>Workforce Development - Training</fullName>
            </value>
            <value>
                <fullName>Workforce Development - Wage Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>