force-app/main/default/objects/Issue__c/fields/Other_Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Problem_Type__c</fullName>
    <description>This field used to capture details if Other Problem Type is selected.</description>
    <inlineHelpText>This field used to capture details if Other Problem Type is selected.</inlineHelpText>
    <label>Other Problem Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>