force-app/main/default/objects/Issue__c/fields/Outcome_of_Identified_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_Identified_Opportunity__c</fullName>
    <label>Outcome of Identified Opportunity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>