force-app/main/default/objects/Issue__c/fields/Outcome_of_Problem__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_Problem__c</fullName>
    <label>Outcome of Problem</label>
    <length>100</length>
    <type>Text</type>
</CustomField>