force-app/main/default/objects/Issue__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility (ramps, signage, etc.)</fullName>
            </value>
            <value>
                <fullName>Business development (expanding networks, exporting and promotional opportunities)</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Development - Building Permit</fullName>
            </value>
            <value>
                <fullName>Development – Committee of Adjustment</fullName>
            </value>
            <value>
                <fullName>Development – Preliminary Project Review (PPR)</fullName>
            </value>
            <value>
                <fullName>Development - Site Plan</fullName>
            </value>
            <value>
                <fullName>Development - Site Search</fullName>
            </value>
            <value>
                <fullName>Development – Zoning / Official Plan</fullName>
            </value>
            <value>
                <fullName>Encroachment by Sensitive Uses</fullName>
            </value>
            <value>
                <fullName>Funding - Lack of Access to Funding</fullName>
            </value>
            <value>
                <fullName>Government Procurement (selling something to the City)</fullName>
            </value>
            <value>
                <fullName>Municipal Notice of Violation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property Assessment</fullName>
            </value>
            <value>
                <fullName>Real Estate – Cost / Availability</fullName>
            </value>
            <value>
                <fullName>Transportation – Congestion / Delay</fullName>
            </value>
            <value>
                <fullName>Transportation – Parking</fullName>
            </value>
            <value>
                <fullName>Transportation – Public Transit</fullName>
            </value>
            <value>
                <fullName>Transportation – Road Surface / Right of Way / Sidewalk</fullName>
            </value>
            <value>
                <fullName>Utilities – Broadband</fullName>
            </value>
            <value>
                <fullName>Utilities – Electric</fullName>
            </value>
            <value>
                <fullName>Utilities – Natural Gas</fullName>
            </value>
            <value>
                <fullName>Utilities – Water</fullName>
            </value>
            <value>
                <fullName>Workforce – Amenities</fullName>
            </value>
            <value>
                <fullName>Workforce – Supply &amp; Demand</fullName>
            </value>
            <value>
                <fullName>Procurement (selling something to the City)</fullName>
                <isActive>false</isActive>
                <label>Procurement (selling something to the City)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>