force-app/main/default/objects/Issue__c/fields/Recommend_Service__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Service__c</fullName>
    <label>Recommend Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>