force-app/main/default/objects/Issue__c/fields/Resolution_of_Problem__c.field-meta.xml
<CustomField>
    <fullName>Resolution_of_Problem__c</fullName>
    <label>Resolution of Problem</label>
    <type>TextArea</type>
</CustomField>