force-app/main/default/objects/Issue__c/fields/Steps_taken_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps_taken_Next_Steps__c</fullName>
    <label>Steps taken/Next Steps</label>
    <type>TextArea</type>
</CustomField>