force-app/main/default/objects/Issue__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <description>This will be used to track any new Opportunity but not necessarily related to any other record.</description>
    <label>Opportunity</label>
</RecordType>