force-app/main/default/objects/Issue__c/recordTypes/Problem.recordType-meta.xml
<RecordType>
    <fullName>Problem</fullName>
    <active>true</active>
    <description>Its should be used for tracking any problem related to Account, Contact or Initiative.</description>
    <label>Problem</label>
</RecordType>