force-app/main/default/objects/Issue__c/validationRules/Validation_Agreement_FinIncentiv_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Agreement_FinIncentiv_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Agreement__c)),NOT(ISBLANK(Agreement__r.Account_Name__c)),NOT(ISBLANK(Financial_Incentive__c)),NOT(ISBLANK(Financial_Incentive__r.Account__c)), Agreement__r.Account_Name__c &lt;&gt; Financial_Incentive__r.Account__c)</errorConditionFormula>
    <errorMessage>Agreement Account and Financial Account are not same.</errorMessage>
</ValidationRule>