force-app/main/default/objects/Issue__c/validationRules/Validation_Agreement_Issue_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Agreement_Issue_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Agreement__c)),NOT(ISBLANK(Agreement__r.Account_Name__c)),NOT(ISBLANK(Account__c)), Agreement__r.Account_Name__c &lt;&gt; Account__c)</errorConditionFormula>
    <errorMessage>Agreement Account and Issue Account are not same.</errorMessage>
</ValidationRule>