force-app/main/default/objects/Issue__c/validationRules/Validation_FinIncentiv_Issue_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_FinIncentiv_Issue_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Account__c)),NOT(ISBLANK(Financial_Incentive__c)),NOT(ISBLANK(Financial_Incentive__r.Account__c)), Account__c &lt;&gt; Financial_Incentive__r.Account__c)</errorConditionFormula>
    <errorMessage>Agreement Account and Financial Account are not same.</errorMessage>
</ValidationRule>