force-app/main/default/objects/Issue__c/validationRules/Validation_for_Date_Closed_on_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Date_Closed_on_Completed</fullName>
    <active>true</active>
    <description>This rule will ensure user must specify Date Closed for status completed.</description>
    <errorConditionFormula>AND(TEXT(Status__c)=&#39;Completed&#39;,ISBLANK(Date_Closed__c))</errorConditionFormula>
    <errorDisplayField>Date_Closed__c</errorDisplayField>
    <errorMessage>Date Closed required for Completed Status</errorMessage>
</ValidationRule>