force-app/main/default/objects/Issue__c/validationRules/Validation_for_Other_Problem_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Other_Problem_Type</fullName>
    <active>true</active>
    <description>This validation rule will make sure if Problem Type is Other than Other Problem Type details must be specified.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName =&#39;Problem&#39;,TEXT(Problem_Type__c)=&#39;Other&#39;,ISBLANK(Other_Problem_Type__c))</errorConditionFormula>
    <errorDisplayField>Other_Problem_Type__c</errorDisplayField>
    <errorMessage>Specify Other Problem Type Details</errorMessage>
</ValidationRule>