force-app/main/default/objects/Issue__c/validationRules/Validation_Interaction_Agreement_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Interaction_Agreement_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Agreement__c)),NOT(ISBLANK(Agreement__r.Account_Name__c)),NOT(ISBLANK(Interaction__c)),NOT(ISBLANK(Interaction__r.Account__c)), Agreement__r.Account_Name__c &lt;&gt; Interaction__r.Account__c)</errorConditionFormula>
    <errorMessage>Agreement Account and Interaction Account are not same.</errorMessage>
</ValidationRule>