force-app/main/default/objects/Issue__c/validationRules/Validation_Interaction_Finlncent_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Interaction_Finlncent_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Financial_Incentive__c)),NOT(ISBLANK(Financial_Incentive__r.Account__c)),NOT(ISBLANK(Interaction__c)),NOT(ISBLANK(Interaction__r.Account__c)), Financial_Incentive__r.Account__c &lt;&gt; Interaction__r.Account__c)</errorConditionFormula>
    <errorMessage>Financial Incentive Account and Interaction Account are not same.</errorMessage>
</ValidationRule>