force-app/main/default/objects/Issue__c/validationRules/Validation_Interaction_Issue_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Interaction_Issue_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Account__c)),NOT(ISBLANK(Interaction__c)),NOT(ISBLANK(Interaction__r.Account__c)), Account__c &lt;&gt; Interaction__r.Account__c)</errorConditionFormula>
    <errorMessage>Interaction  Account and Issue Account are not same.</errorMessage>
</ValidationRule>