force-app/main/default/objects/Issue__c/listViews/All_Issues.listView-meta.xml
<ListView>
    <fullName>All_Issues</fullName>
    <columns>NAME</columns>
    <columns>Issue_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Problem_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Account__c</columns>
    <columns>Date_Closed__c</columns>
    <columns>Date_Raised__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Issues</label>
</ListView>